vlib/v/checker/tests/int_ptr_array_index_err.vv
pub fn read_int(bytes []u8, mut offset &int) int {
	defer {
		offset += 4
	}
	return bytes[offset]
}
